<resources>
    <string name="app_name">FDM</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="action_settings">Axustes</string>
    <string name="ab_share">Anuncia este evento</string>
    <string name="ab_contact">Contacta</string>
    <string name="ab_menu">Menú</string>
    <string name="new_ok">OK</string>
    <string name="pref_title_version">Versión</string>
    <string name="pref_title_about">Sobre FDM</string>
    <string name="pref_summary_seguir">Seguir a @xbcrespo en Twitter</string>
    <string name="pref_title_seguir">Seguir</string>
    <string name="pref_summary_contact">Desexa engadir un novo evento?</string>
    <string name="pref_title_contact">Contactar</string>
    <string name="pref_summary_share">Comparte esta app cos teus amigos</string>
    <string name="pref_title_share">Compartir</string>
    <string name="pref_share_content">Coñeces xa a app das Festas do Monte? Búscaa na Play Store #fdmapp http://www.ir.gl/fdm</string>
    <string name="pref_summary_agradecementos">As imaxes son cortesía de @EstebGlez e @AntonioLombaBaz</string>
    <string name="pref_title_agradecementos">Agradecementos</string>
    <string name="JSON_espera">Agarde por favor…</string>
    <string name="JSON_error">Erro no servizo. Faga click aquí para buscar actualización na Play Store.</string>
    <string name="Play_Store_URL">market://details?id=com.caracocha.fdm</string>
    <string name="no_events_found">Non se atopou ningún evento</string>
    <string name="item_info">Produciuse un erro. Abra a aplicación máis tarde ou comprobe se existe unha actualización na Play Store</string>
    <string name="no_maps_app">Non se atopou unha aplicación para mapas</string>
    <string name="item_ad">A súa publicidade aquí (acaracocha@gmail.com)</string>

    <string name="title_activity_header_image">HeaderImage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
